--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ANDROID / ECLIPSE
+
 # built application files
 *.apk
 *.ap_
@@ -8,6 +10,11 @@
 # Java class files
 *.class
 
+# generated files - android project subfolder
+Android/bin/
+Android/gen/
+Android/assets/
+
 # generated files
 bin/
 gen/
@@ -15,6 +22,29 @@ gen/
 # Local configuration file (sdk path, etc)
 local.properties
 
-# Eclipse project files
-.classpath
-.project
+# IOS / Xcode
+build/*
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
+IOS/www/
+
+# OSX
+.DS_Store
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
